@@ -1,4 +1,4 @@
-$: << File.expand_path(File.dirname(__FILE__))
+$:.unshift File.expand_path(File.dirname(__FILE__))
 
 require 'fileutils'
 require 'timeout'
