@@ -1,4 +1,9 @@
 == 0.5.4 Flying Mustard release
+ * Don't read the full body, use direct streaming when sending response.
+   See: Response#each
+   As a result, the Content-Length can not be calculated any more.
+   You have to do set it in your adapter. All frameworks do it anyway.
+ * Add Server response header
  * Fix --user and --group option not changing daemon process privileges
  
 == 0.5.3 Purple Yogurt release
